--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  charts_flutter: ^0.11.0
+  fl_chart: ^0.36.2
 
 
   # The following adds the Cupertino Icons font to your application.
