--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   fl_chart: ^0.36.2
+  camera: ^0.8.1
 
 
   # The following adds the Cupertino Icons font to your application.
