--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "imgs/logo.png"
 
 dev_dependencies:
   flutter_test:
