--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,11 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - imgs/tylenol.jpeg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
